# Lectioskema

./: .gitignore  README.md  lectio.html  pyproject.toml  requirements.txt
.agents/skills/l/: SKILL.md
.agents/skills/planning/: SKILL.md
.github/: AGENT_FORMATTING.md  copilot-instructions.md
.github/workflows/: build-ics.yml  update-calendar.yml
Avanceret skema - Lectio - TEC_files/: lectio-css.bundle.css  lectio.bundle.js.download  print-css.bundle.css  runtime.bundle.js.download  vendor-post.bundle.js.download  vendor.bundle.js.download
docs/: assignments-plan.md  assignments.ics  calendar.ics
docs/execplans/: cookie-header-refresh-options.md  fix-gh-actions-fetch-lectio.md  keep-lectio-sync-working-4-weeks.md
scripts/: bootstrap.ps1  install_skills.ps1  update_ics.ps1  update_ics_and_push.ps1
skills-repo/: README.md
skills-repo/skills/planning/: SKILL.md
src/lectio_sync/: __main__.py  cli.py  config.py  event_model.py  html_parser.py  ical_writer.py  lectio_fetch.py
tests/: test_assignments_parser.py  test_html_parser.py  test_ical_writer.py  test_lectio_fetch.py
